# concurrency-dataloads

./: README.md
computer-vision-data-loader/: .gitignore  experiment.ipynb  pyproject.toml
computer-vision-data-loader/data/: pokemon-gen6-data.csv
computer-vision-data-loader/src/: loader_asyn.py  loader_multi.py  loader_seq.py  loader_thread.py
concurrent-downloads/: .gitignore  asyncio_.py  multiprocessing_.py  requirements.txt  sequential.py  test_solutions.py  threading_.py  utils.py
concurrent-downloads/data/: pokemon-gen3-data.csv  pokemon-gen4-data.csv  pokemon-gen5-data.csv
